<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="4dp"
    android:background="?android:selectableItemBackground"
    android:divider="#ff3d00"
    android:dividerPadding="5dp"
    android:elevation="28dp"
    android:fadingEdge="vertical"
    android:orientation="vertical"

    android:showDividers="end"
    tools:context="com.vyke.Countries.MainActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:elevation="4dp"
        android:fadingEdgeLength="8dp">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:orientation="vertical">

            <TextView
                android:id="@+id/time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:textColor="@android:color/black" />

            <TextView
                android:id="@+id/date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:textColor="@android:color/black" />

            <TextView
                android:id="@+id/day"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:textColor="@android:color/black" />
        </LinearLayout>


            <android.support.v7.widget.AppCompatImageView
                android:id="@+id/imgIcon"
                android:layout_width="140dp"
                android:layout_height="80dp"
                android:layout_centerInParent="true"
                android:layout_marginBottom="5dp"
                android:layout_marginTop="5dp" />


        <ImageView
            android:id="@+id/map_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:layout_gravity="end"
            android:layout_margin="10dp"
            android:focusable="false"
            android:focusableInTouchMode="false"
            android:src="@drawable/ic_world_location" />
            <ProgressBar
                android:id="@+id/progress"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:layout_gravity="center" />
    </RelativeLayout>

        <LinearLayout

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="fill_horizontal"

            android:orientation="vertical"
            android:paddingBottom="5dp"
            android:paddingTop="5dp">

            <TextView
                android:id="@+id/countryname"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"

                android:textAlignment="center"
                android:textColor="@color/primaryTextColor"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/countrycapital"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:textAlignment="center"
                android:textColor="@color/primaryTextColor"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/region"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:textAlignment="center"
                android:textColor="@color/primaryTextColor"

                android:textSize="20sp" />
        </LinearLayout>

    <LinearLayout
            android:layout_width="match_parent"
        android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingBottom="5dp"
            android:paddingStart="8dp"
        android:paddingTop="5dp">
            <TextView
                android:id="@+id/nativename"

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/primaryTextColor"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/demomyn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/primaryTextColor"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/subregion"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/primaryTextColor"
                android:textSize="18sp" />

            <!--     <TextView
                     android:id="@+id/alphacode"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:hint="alpha2code"
                     android:textColor="@color/text_color"
                     android:textSize="18dp" />
                     -->
    </LinearLayout>

    <LinearLayout
            android:layout_width="match_parent"
        android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingBottom="5dp"
            android:paddingStart="5dp"
        android:paddingTop="5dp">

            <TextView
                android:id="@+id/area"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:textColor="@color/primaryTextColor"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/ppln"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:textColor="@color/primaryTextColor"
                android:textSize="18sp" />

           <TextView
                android:id="@+id/alpha3code"
               android:layout_width="match_parent"
                android:layout_height="wrap_content"

               android:textColor="@color/primaryTextColor"
               android:textSize="18sp" />


            <TextView
                android:id="@+id/callingcode"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:textColor="@color/primaryTextColor"
                android:textSize="18sp" />

    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:orientation="vertical"
        android:paddingBottom="5dp"
        android:paddingStart="8dp"
        android:paddingTop="5dp">

        <TextView
            android:id="@+id/langspoke"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:textColor="@color/primaryTextColor"
            android:textSize="18sp" />


        <TextView
            android:id="@+id/timezones"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:textColor="@color/primaryTextColor"
            android:textSize="18sp" />


        <TextView
            android:id="@+id/currencies"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:textColor="@color/primaryTextColor"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/shareborder"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/primaryTextColor"
            android:textSize="18sp" />

    </LinearLayout>

</LinearLayout>















